remove button added to the todolist

--- a/index.html
+++ b/index.html
@@ -37,16 +37,19 @@
         <section class="list">
             <div id="inputSection">
                 <h1 class="d-flex justify-content-center">ToDoList</h1>
-                <input type="text" class="container" placeholder="Digite aqui sua tarefa" id="listInput">
-                <button id="addInput" class="btn btn-secondary">Add</button>
+
+                <div class="inputArea container">
+                    <input type="text" class="container" placeholder="Digite aqui sua tarefa" id="listInput">
+                    <button id="addInput" class="btn btn-secondary">Add</button>
+                </div>
             </div>
 
             <ul class="list-group" id="ulContent">
-                <li class="list-group-item justify-content-center"><input class="checkbox" type="checkbox">Roupas</li>
-                <li class="list-group-item justify-content-center"><input class="checkbox" type="checkbox">Acessórios</li>
-                <li class="list-group-item justify-content-center"><input class="checkbox" type="checkbox">Comida</li>
-                <li class="list-group-item justify-content-center"><input class="checkbox" type="checkbox">Bagagem</li>
-                <li class="list-group-item justify-content-center"><input class="checkbox" type="checkbox">Livros</li>
+                <li class="list-group-item justify-content-center">Roupas</li>
+                <li class="list-group-item justify-content-center">Acessórios</li>
+                <li class="list-group-item justify-content-center">Comida</li>
+                <li class="list-group-item justify-content-center">Bagagem</li>
+                <li class="list-group-item justify-content-center">Livros</li>
             </ul>
         </input>
         </section>
